# Gameoff-2025-game

./: CMakeLists.txt  auto_reload.sh
Gameoff 2025/.obsidian/: workspace.json
include/: cameraclass.h  classes.h  shaderclass.h  textureclass.h  vertex_stuff.h
include/glad/: glad.h
shaders/: default.frag  default.vert
src/: glad.c  main.cpp
